# crispspec

./: .gitignore  AGENTS.md  README.md  TODO.md  concepts.md  main.py  module.md  pyproject.toml
.github/workflows/: check.yaml
src/behavior/: orchestration.md  process.md  reaction.md  schedule.md
src/checker/: __init__.py  main.py
src/contract/: entity.md  error.md  event.md  interface.md
src/db/: __init__.py  interface.py  mapping.py  plan.md  sql.py  sqlite.py  types.py
src/delivery/: config-set.md  configuration.md  environment.md  pipeline.md  secret.md
src/governance/: constraint.md  dependency.md  metric.md
src/governance/rbac/: concepts.md  permission.md  role.md
src/incident/: incident.md  playbook.md  runbook.md
src/requirement/: business-concept.md  draft.md  natural-language-structuring.md  requirement.md  user-story.md
src/test/: acceptance-test.md  benchmark.md  contract-test.md  integration-test.md  scenario-test.md  transition-test.md
src/yaml/: schema.md
tests/db/: __init__.py  test_interface.py  test_mapping.py  test_sqlite.py  test_types.py
